--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "debounce": "^1.2.1",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.5"
+    "notiflix": "^3.2.5",
+    "use-debounce": "^8.0.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
